--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidProject</string>
     <string name="title_activity_tracker">Map</string>
+    <string name="title_activity_player_map_view">Map</string>
 </resources>
